syntax = "proto3";

package CoinListAPI;

option go_package = "github.com/Yongwen6580/CoinListAPI/gRPC/coinService";

service CoinGecko {
  rpc List (Empty) returns (ListResponse) {}
  rpc GetTokenPrice (GetTokenPriceRequest) returns (GetTokenPriceResponse) {}
  rpc GetTrendingCoins (GetTrendingCoinsRequest) returns (GetTrendingCoinsResponse) {}
}

message Empty {

}

message ListResponse {
  repeated Coin coins = 1;
}

message GetTokenPriceRequest {
  string name = 1;
}

message GetTokenPriceResponse {
  double usd = 1;
}

message GetTrendingCoinsRequest {
}

message GetTrendingCoinsResponse {
  repeated Coin topCoin = 1;
}

message Coin {
  string id = 1;
  string name = 2;
  string symbol = 3;
  float usd = 4;
  string category = 5;
  int64 market_cap = 6;
  int64  coinID = 7;
  float price = 8;
}


